style.css
.nav-fixed-adjust {
  margin-top: 4rem;
}

.landing-img {
  width: 100%;
  height: 50vh;
  object-fit: cover;
}

.categories,
.new-arrivals {
  gap: 1rem;
  padding: 2rem;
}

.categories {
  justify-items: center;
}

.category-img {
  height: 100%;
  border-radius: 4px;
}

.new-arrivals .card {
  justify-self: center;
  min-width: 30vw;
}

.new-arrivals .card-img {
  width: 100%;
  border-radius: 4px;
}

.new-arrivals .c-badge-right {
  z-index: 2;
}

.nav-fixed {
  z-index: 9999;
}

.card-img {
  object-fit: cover;
}

@media (max-width: 650px) {
  .categories {
    grid-template-columns: repeat(2, 1fr);
  }
  .new-arrivals {
    grid-template-columns: repeat(1, 1fr);
  }
  .new-arrivals .card {
    max-width: 100%;
    justify-self: stretch;
  }
}
@media (max-width: 400px) {
  .categories {
    grid-template-columns: repeat(1, 1fr);
  }
}

